<resources>

    <string name="app_name" translatable="false">harmony</string>
    <string name="app_website" translatable="false">http://harmony.ilusons.com</string>
    <string name="app_desc" translatable="false">A unique, non-conventional music player for Android with personalized recommendations and free music!</string>

    <string name="error">Some error!</string>
    <string name="now_using_">Now using</string>
    <string name="_fx">fx!</string>
    <string name="select_title">Select?</string>
    <string name="applied_on_restart">Will be completely applied on restart!</string>

    <string name="rating_dialog_experience">How was your experience with us?</string>
    <string name="rating_dialog_maybe_later">Maybe later</string>
    <string name="rating_dialog_never">Never</string>
    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="rating_dialog_cancel">Cancel</string>
    <string name="rating_dialog_suggestions">Suggest us what went wrong and we\'ll work on it!</string>

    <string name="playback_setup_title">Tour?</string>
    <string name="playback_setup_msg">Would you like a short tour, highlighting the basic usage of this screen and hidden functions?</string>
    <string name="playback_setup_tune_choose_preset">Choose your music style!</string>
    <string name="playback_setup_msg_1">Press to Play/Pause, and long press to Stop. Swipe for magic!</string>
    <string name="playback_setup_msg_2">Press to skip. Long press to random.</string>
    <string name="playback_setup_msg_3">Visualizations. Long-press to cycle between styles.</string>
    <string name="playback_setup_msg_4">Tune. Long-press for advanced tune.</string>
    <string name="playback_setup_msg_5">Lyrics view. Turn on internet for automatic lyrics. Long-press for options.</string>
    <string name="playback_setup_msg_6">Cover art, video, visualizations will be here (in that order)! Long-press for options.</string>
    <string name="playback_setup_msg_7">That\'s all! Now go play something!</string>

    <string name="repeat_on">Repeat turned ON</string>
    <string name="repeat_off">Repeat turned OFF</string>
    <string name="shuffle_on">Shuffle turned ON</string>
    <string name="shuffle_off">Shuffle turned OFF</string>
    <string name="looking_up">Looking up …</string>
    <string name="found_something">Found something …</string>
    <string name="apply_new_details_title">Apply new details?</string>
    <string name="details_applied_restart_needed">Music details updated, you may need to restart app to see changes!</string>
    <string name="details_not_found_internet">Music details were not found over internet or some error occurred.</string>
    <string name="gen_fp_looking_up">Generating fingerprint and looking up …</string>
    <string name="details_found_invalid">Music details found were not appropriate for use!</string>
    <string name="install_text_editor">Please install a text editor first!</string>
    <string name="edit_lyrics_for_">Edit lyrics for</string>
    <string name="artwork_downloaded">Artwork downloaded!</string>
    <string name="artwork_download_failed">Artwork download failed!</string>
    <string name="downloading_artwork">Downloading artwork …</string>
    <string name="share_lyrics_for_">Share lyrics for</string>
    <string name="share_lyrics">Share lyrics</string>
    <string name="toggle_cover">Toggle cover</string>
    <string name="toggle_video">Toggle video</string>
    <string name="toggle_lyrics">Toggle lyrics</string>
    <string name="re_download_cover">Re-download cover</string>
    <string name="re_load_lyrics">Re-load lyrics</string>
    <string name="edit_lyrics">Edit lyrics</string>
    <string name="update_metadata">Lookup and update details</string>
    <string name="tour">Tour</string>

    <string name="import_">Import</string>
    <string name="export_">Export</string>

    <string name="smart_tune_info">Smart Tune automatically applies the best matched Tune preset on every music change, based on Genre &amp; Tags.</string>

    <string name="tune_presets_info1">Pre-defined presets to customize tune in one go.</string>
    <string name="tune_presets_info2">The preset file includes Tune* configurations. Not all will work, due to in-compatibility in hardware.</string>
    <string name="tune_presets_info3">You can e-mail us your own preset, by exporting. If we like it, you\'ll see it in next update and get a surprise*.</string>
    <string name="will_apply_after_restart">Will be completely applied on restart!</string>
    <string name="avfx_tap_more">If it does not work, tap same button few times!</string>
    <string name="tune_title">Tune 🎧</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="now_playing">Now playing</string>
    <string name="playlist_settings">Playlist settings</string>
    <string name="playlist_view_settings">View settings</string>
    <string name="jump_to_current_item">Jump</string>
    <string name="tune">Tune</string>
    <string name="timer">Timer</string>
    <string name="refresh">Refresh</string>
    <string name="downloads">Downloads</string>
    <string name="waiting">Waiting ...</string>
    <string name="network_unavailable">Network un-available!</string>
    <string name="save_as_smart_playlist">Save as smart playlist</string>
    <string name="my_recommendations">My recommendations</string>

    <string name="player_type_info"><![CDATA[OpenSL player, <br/>
        - HQ audio <br/>
        - Fade in/out effect (aka little crossfade) <br/>
        - 10 bands EQ <br/>
        - HQ reverb, bassboost, virtualizer <br/>
        - Buggy, unstable, may work <br/>
        - No online streaming <br/>
        - Online downloads <br/>
        <br/>
        AndroidOS player, <br/>
        - Normal audio <br/>
        - No fade effects <br/>
        - 5 bands EQ <br/>
        - Normal effects <br/>
        - Stable <br/>
        - Online streaming <br/>
        - Online downloads <br/>
    ]]></string>

</resources>
