<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_magnifier"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:iconifiedByDefault="false"
        app:showAsAction="collapseActionView|ifRoom"
        />

    <item
        android:id="@+id/overflow"
        android:icon="@drawable/ic_more_vertical"
        android:orderInCategory="101"
        android:title="@string/more"
        app:showAsAction="always">

        <menu>

            <group>

                <item
                    android:id="@+id/jump"
                    android:icon="@drawable/ic_arrows_glide"
                    android:title="@string/jump_to_current_item"
                    app:showAsAction="ifRoom"
                    />

            </group>

            <group>

                <item
                    android:id="@+id/refresh"
                    android:icon="@drawable/ic_arrows_clockwise_dashed"
                    android:title="@string/refresh"
                    app:showAsAction="ifRoom"
                    />

            </group>

            <group>

                <item
                    android:id="@+id/playlist_view_sort_mode"
                    android:icon="@drawable/ic_music_playlist"
                    android:title="@string/playlist_view_sort_mode"
                    app:showAsAction="ifRoom"
                    />

            </group>

            <group>

                <item
                    android:id="@+id/playlist_view_add_to_playlist"
                    android:icon="@drawable/ic_music_playlist"
                    android:title="Add to playlist"
                    app:showAsAction="ifRoom"
                    />

            </group>

            <group>

                <item
                    android:id="@+id/playlist_view_save_playlist"
                    android:icon="@drawable/ic_music_playlist"
                    android:title="Save changes"
                    app:showAsAction="ifRoom"
                    />

            </group>

            <group>

                <item
                    android:id="@+id/playlist_view_export_playlist"
                    android:icon="@drawable/ic_music_playlist"
                    android:title="Export playlist"
                    app:showAsAction="ifRoom"
                    />

            </group>

        </menu>

    </item>

</menu>
